# ahungry-fleece

./: .gitignore  Makefile.in  README.md  ahungry-fleece.asd  build.sh  configure.ac  sb-cover.lisp
contrib/sb-cover/: cover.lisp  sb-cover.asd
contrib/sb-md5/: md5.lisp
contrib/sb-rotate-byte/: arm-vm.lisp  arm64-vm.lisp  compiler.lisp  package.lisp  ppc-vm.lisp  rotate-byte.lisp  sb-rotate-byte.asd  x86-64-vm.lisp  x86-vm.lisp
roswell/: ahungry-fleece.ros
skel/: .gitignore  Makefile.in  README.md  configure.ac  skeleton.asd
skel/roswell/: skeleton.ros
skel/src/: skeleton.lisp
skel/src/libs/: skeleton.lib.stub.lisp
skel/t/: skeleton.run.tests.lisp
src/: af.lib.hashy.lisp  af.lib.loggy.lisp  af.lib.testy.lisp  ahungry-fleece.lisp
src/libs/: af.lib.ansi-colors.lisp  af.lib.clone.lisp  af.lib.coverage.lisp  af.lib.hashy.lisp  af.lib.io.lisp  af.lib.loggy.lisp  af.lib.testy.lisp
t/: af.run.tests.lisp
t/fixtures/: pets.json  pets.yml
